# Homework_OnlineStore_Django

./: Homework_22.md  Homework_23.md  Homework_24.md  README.md  catalog_fixture.json  pyproject.toml
catalog/: admin.py  models.py  urls.py  views.py
catalog/management/commands/: add_test_models.py
catalog/migrations/: 0001_initial.py
catalog/templates/: contacts.html  home.html
config/: settings.py
